<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>putn_rviz_plugins</name>
    <version>0.0.1</version>
    <description>RVIZ2 plugins for visualizing vision_msgs</description>
    <maintainer email="georg.novotny@aon.at">Georg Novotny</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rviz2</depend>
    <depend>rclcpp</depend>
    <depend>rclpy</depend>
    <depend>pluginlib</depend>
    <depend>rviz_common</depend>
    <depend>rviz_default_plugins</depend>
    <depend>rviz_rendering</depend>
    <depend>vision_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
